<resources>
    <string name="app_name">Connect</string>
    <string name="connect">connect</string>
    <string name="online_calls_messaging_and_nvideo_conference_made_easy">Online calls, messaging and\nvideo conference made easy</string>
    <string name="we_will_provide_all_best_ways_to_nconnect_easily_in_one_click">We will provide all best ways to\nconnect easily in one click</string>
    <string name="join_for_free">Join for free</string>
    <string name="login">login</string>
    <string name="register">Register</string>
    <string name="next">Next</string>
    <string name="create_account">Create Account</string>
    <string name="full_name">Full Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="gender">Gender</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="didn_t_have_an_account">Didn\'t have an account?</string>
    <string name="create_one">Create one</string>
    <string name="remember_me">Remember me</string>
    <string name="forget_password">Forget password</string>
    <string name="forget_ur_password">Forget\npassword</string>
    <string name="forget_password_details">Provide your accounts\'s email for which you want to reset your password</string>
    <string name="new_credentials">New\nCredentials</string>
    <string name="new_credentials_details">Your identity has been verified!\nSet your new password</string>
    <string name="password_updated">Password\nupdated</string>
    <string name="password_updated_details">Your password has been updated!</string>
    <string name="app_logo">app logo</string>
    <string name="user_phone">+201092222223</string>
    <string name="otp_text">Please enter the verification\ncode sent to</string>
    <string name="verify">Verify</string>
    <string name="didn_t_receive_a_code">Didn\'t receive a code?</string>
    <string name="resend_code">Resend code</string>
    <string name="code_verification">Code Verification</string>
    <string name="verification_image_view">verification image view</string>
    <string name="back_button">back button</string>
    <string name="close_button">close button</string>
    <string name="contacts">Contacts</string>
    <string name="search_name_here">Search name here...</string>
    <string name="my_contacts_20">My Contacts (0)</string>
    <string name="call">Call</string>
    <string name="edit_contact">Edit Contact</string>
    <string name="video_call">Video Call</string>
    <string name="chat">Chat</string>
    <string name="join_meeting">Join Meeting</string>
    <string name="rooms">Rooms</string>
    <string name="reject">Reject</string>
    <string name="confirm">Confirm</string>
    <string name="incoming_call">incoming call</string>
    <string name="cancel">Cancel</string>
    <string name="logout">Log Out</string>
    <string name="type_a_message">Type a message</string>
    <string name="outgoing_call">outgoing call</string>
    <string name="my_profile">My Profile</string>
    <string name="update">Update</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="new_password">New Password</string>
    <string name="current_password">Current Password</string>
    <string name="change_password">Change Password</string>
    <string name="notifications">Notifications</string>
</resources>