<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_lighter"
    tools:context=".users.ui.LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="45dp"
            android:paddingBottom="36dp"
            android:transitionName="transition_login"
            tools:context=".users.ui.LoginActivity">

            <ImageView
                android:id="@+id/login_back_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/back_button"
                android:padding="5dp"
                android:src="@drawable/arrow_back"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/logo"
                android:layout_width="55dp"
                android:layout_height="55dp"
                android:layout_marginTop="80dp"
                android:background="@drawable/logo_background"
                android:contentDescription="@string/app_logo"
                android:padding="10dp"
                android:src="@drawable/logo_white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/welcome_back_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/red_hat_text_bold"
                android:text="@string/welcome_back"
                android:textColor="@color/white"
                android:textSize="28sp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@+id/logo" />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/login_input_phone"
                style="@style/TextInputLayouts"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="26dp"
                android:hint="@string/phone_number"
                app:endIconMode="clear_text"
                app:layout_constraintTop_toBottomOf="@+id/welcome_back_text_view"
                app:startIconDrawable="@drawable/ic_baseline_phone_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/red_hat_text_regular"
                    android:inputType="phone"
                    android:textColor="@color/white_70" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/login_input_password"
                style="@style/TextInputLayouts"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:hint="@string/password"
                app:endIconMode="password_toggle"
                app:layout_constraintTop_toBottomOf="@+id/login_input_phone"
                app:startIconDrawable="@drawable/ic_baseline_https_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/red_hat_text_regular"
                    android:inputType="textPassword"
                    android:textColor="@color/white_70" />
            </com.google.android.material.textfield.TextInputLayout>

            <CheckBox
                android:id="@+id/remember_me_check_box"
                style="@style/Widget.AppCompat.CompoundButton.CheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/white_70"
                android:text="@string/remember_me"
                android:textColor="@color/white_70"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="@+id/forget_ur_pass"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/forget_ur_pass" />

            <TextView
                android:id="@+id/forget_ur_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:layout_marginBottom="16dp"
                android:text="@string/forget_password"
                android:textAlignment="textEnd"
                android:textColor="@color/white_70"
                android:textSize="14sp"
                app:layout_constraintTop_toBottomOf="@id/login_input_password" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/login_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:layout_marginBottom="32dp"
                android:background="@drawable/filled_button"
                android:elevation="5dp"
                android:fontFamily="@font/red_hat_text_bold"
                android:text="@string/login"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:transitionName="transition_login"
                app:layout_constraintTop_toBottomOf="@+id/remember_me_check_box" />

            <TextView
                android:id="@+id/already_have_an_account_text_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/red_hat_text_regular"
                android:text="@string/didn_t_have_an_account"
                android:textAlignment="textEnd"
                android:textColor="@color/white_70"
                android:textSize="14sp"
                app:layout_constraintEnd_toStartOf="@+id/register_text_view"
                app:layout_constraintTop_toBottomOf="@id/login_btn"
                app:layout_constraintWidth_percent="0.62" />

            <TextView
                android:id="@+id/register_text_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/red_hat_text_bold"
                android:text="@string/create_one"
                android:textColor="@color/white"
                android:textSize="14sp"
                app:layout_constraintStart_toEndOf="@id/already_have_an_account_text_view"
                app:layout_constraintTop_toBottomOf="@id/login_btn"
                app:layout_constraintWidth_percent="0.35" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <ProgressBar
        android:id="@+id/login_progress_bar"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>