<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_app"
    tools:context=".ui.DashboardActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="45dp"
            android:paddingBottom="36dp"
            android:transitionName="transition_register"
            tools:context=".ui.RegisterActivity">

            <ImageView
                android:id="@+id/logo"
                android:layout_width="55dp"
                android:layout_height="55dp"
                android:layout_marginTop="45dp"
                android:background="@drawable/logo_background"
                android:contentDescription="@string/app_logo"
                android:padding="10dp"
                android:src="@drawable/logo_white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/dashboard_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:fontFamily="@font/righteous"
                android:text="Enjoy our app"
                android:textColor="@color/white"
                android:textSize="36sp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@+id/logo" />

            <TextView
                android:id="@+id/app_desc1_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/red_hat_text_regular"
                android:text="@string/online_calls_messaging_and_nvideo_conference_made_easy"
                android:textColor="@color/white_60"
                android:textSize="20sp"
                app:layout_constraintTop_toBottomOf="@id/dashboard_text_view" />

            <TextView
                android:id="@+id/app_desc2_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/red_hat_text_regular"
                android:text="@string/we_will_provide_all_best_ways_to_nconnect_easily_in_one_click"
                android:textColor="@color/white_40"
                android:textSize="18sp"
                app:layout_constraintTop_toBottomOf="@id/app_desc1_text_view" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/rooms_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="65dp"
                android:layout_marginBottom="32dp"
                android:background="@drawable/filled_button"
                android:backgroundTint="@color/purple_lighter_50"
                android:fontFamily="@font/red_hat_text_bold"
                android:text="@string/rooms"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:transitionName="transition_login"
                app:layout_constraintTop_toBottomOf="@id/app_desc2_text_view" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/contacts_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="32dp"
                android:background="@drawable/filled_button"
                android:backgroundTint="@color/purple_lighter_50"
                android:elevation="5dp"
                android:fontFamily="@font/red_hat_text_bold"
                android:text="@string/contacts"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:transitionName="transition_register"
                app:layout_constraintTop_toBottomOf="@id/rooms_btn" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/chats_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="32dp"
                android:background="@drawable/filled_button"
                android:backgroundTint="@color/purple_lighter_50"
                android:elevation="5dp"
                android:fontFamily="@font/red_hat_text_bold"
                android:text="@string/chat"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:transitionName="transition_register"
                app:layout_constraintTop_toBottomOf="@id/contacts_btn" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>