<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <ScrollView xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="26dp"
            android:paddingBottom="36dp"
            tools:context=".ui.ForgetPasswordActivity">

            <TextView
                android:id="@+id/password_updated_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="100dp"
                android:fontFamily="@font/red_hat_text_bold"
                android:text="@string/password_updated"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textSize="35sp"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/password_updated_image"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginTop="32dp"
                android:src="@drawable/password_updated_icon"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/password_updated_title" />

            <TextView
                android:id="@+id/pass_updated_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/red_hat_text_regular"
                android:text="@string/password_updated_details"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:layout_constraintTop_toBottomOf="@id/password_updated_image" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/pass_updated_login_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:layout_marginBottom="32dp"
                android:background="@drawable/filled_button"
                android:backgroundTint="@color/purple_lighter"
                android:elevation="5dp"
                android:fontFamily="@font/red_hat_text_bold"
                android:text="@string/login"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:transitionName="transition_login"
                app:layout_constraintTop_toBottomOf="@+id/pass_updated_details" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>